fixed layout hacked css, changed timezone (30 minutes behind)

--- a/styles/Chats.module.scss
+++ b/styles/Chats.module.scss
@@ -13,8 +13,8 @@
 .container
 {
 	overflow      : hidden;
-	width         : calc(100% - 40px);
-	height        : calc(100% - 40px);
+	width         : calc(100% - 20px);
+	height        : calc(100% - 20px);
 	border-radius : 4px;
 	box-shadow    : 0 0 1rem transparentize($black-100, .95);
 }
